Squashed commit of the following:
commit e44a4d9eb394d46abb93bab8a431889c2284e378
Author: Adam Robinson <akrobinson74@gmail.com>
Date:   Fri Oct 4 10:40:09 2019 +0200

    fix: dependency adjustment IN-1018

commit 7bbf6d192f7769c94e269c768a8429cbb2c051ac
Author: Adam Robinson <akrobinson74@gmail.com>
Date:   Fri Oct 4 10:18:11 2019 +0200

    fix: should add a commit pre-hook to ensure compilation :( IN-1018

commit de1bebe936629069dc52a4fe4328a2043f9b1d24
Author: Adam Robinson <akrobinson74@gmail.com>
Date:   Thu Oct 3 23:00:44 2019 +0200

    feat: seemingly functional auth IN-1018

commit 23d2c95b3a55122196f02b08554d8c206b4d187a
Author: Adam Robinson <akrobinson74@gmail.com>
Date:   Mon Sep 30 13:00:40 2019 +0200

    fix: trying to get the newrelic stuff into the image... IN-1018

commit 6f89b00b21efd8a3e04c050cfb37cf9b2654bb48
Author: Adam Robinson <akrobinson74@gmail.com>
Date:   Mon Sep 30 12:38:52 2019 +0200

    fix: removing newrelic-5.3.0; updating Dockerfile IN-1018

commit b3cf230e178b4b9d4f7e0409ec0ec06973188874
Author: Adam Robinson <akrobinson74@gmail.com>
Date:   Mon Sep 30 12:33:45 2019 +0200

    feat: upgrading to newrelice-5.7.0 IN-1018

commit 5e016b9ef6ecbcdd1ab769047bacd640ec72b8fe
Author: Adam Robinson <akrobinson74@gmail.com>
Date:   Mon Sep 30 12:07:57 2019 +0200

    fix: ktLint fixes IN-1018

commit a10ca5fbcca7cc114fc5f38d9883396d7a06f66b
Author: Adam Robinson <akrobinson74@gmail.com>
Date:   Mon Sep 30 11:30:33 2019 +0200

    fix: corrected detekt errors; squashed a few new bugs IN-1018
