# app/src/main/kotlin/com/phizzard/es/handlers/AuthHandler.kt
@@ -1,36 +1,43 @@
 package com.phizzard.es.handlers
 
-import io.vertx.core.Handler
-import io.vertx.core.Vertx
-import io.vertx.ext.auth.AuthProvider
-import io.vertx.ext.auth.PubSecKeyOptions
+import com.phizzard.JWTConfig
+import com.phizzard.es.AUTH_PASSWORD
+import com.phizzard.es.AUTH_USERNAME
+import com.phizzard.es.PASSWORD
+import com.phizzard.es.USERNAME
+import io.vertx.core.json.JsonObject
 import io.vertx.ext.auth.jwt.JWTAuth
-import io.vertx.ext.auth.jwt.JWTAuthOptions
+import io.vertx.ext.jwt.JWTOptions
 import io.vertx.ext.web.RoutingContext
+import org.apache.http.HttpStatus.SC_OK
+import org.apache.http.HttpStatus.SC_UNAUTHORIZED
+import org.slf4j.LoggerFactory
 
-class AuthHandler : Handler<RoutingContext> {
-    private val authProvider: AuthProvider
+class AuthHandler constructor(
+    private val config: JsonObject,
+    private val jwtAuth: JWTAuth
+) {
+    suspend fun handle(context: RoutingContext) {
+        val (password, username) = listOf(PASSWORD, USERNAME).map { context.request().getHeader(it) }
 
-    init {
-        authProvider = JWTAuth.create(
-            Vertx.vertx(),
-            JWTAuthOptions().addPubSecKey(
-                PubSecKeyOptions()
-                    .setAlgorithm("ES256")
-                    .setPublicKey(
-                        "MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAENyvVJ/AN0fPTE7vJCieXo/mMAnIB\n" +
-                            "7k9YBqEuC23Y6JFdrM/5z8VrKZ4UVz7WfrnoPGo5PbBUVskezWTVXpws4Q=="
-                    )
-                    .setSecretKey(
-                        "MIGHAgEAMBMGByqGSM49AgEGCCqGSM49AwEHBG0wawIBAQQg3hHwF/cw/PxvY83l\n" +
-                            "6JWJfu57S1LtCpFbB2k6cwJzgUWhRANCAAQ3K9Un8A3R89MTu8kKJ5ej+YwCcgHu\n" +
-                            "T1gGoS4LbdjokV2sz/nPxWspnhRXPtZ+ueg8ajk9sFRWyR7NZNVenCzh"
-                    )
+        logger.debug("Config: {}", config)
+
+        if (config.getString(AUTH_USERNAME).equals(username) && config.getString(AUTH_PASSWORD).equals(password)) {
+            val token = jwtAuth.generateToken(
+                JsonObject(),
+                JWTOptions().setAlgorithm(config.getJsonObject("jwtConfig").mapTo(JWTConfig::class.java).algorithm)
             )
-        )
+            context.response()
+                .putHeader("Authorization", "Bearer $token")
+                .setStatusCode(SC_OK)
+                .end()
+        } else
+            context.response()
+                .setStatusCode(SC_UNAUTHORIZED)
+                .end()
     }
 
-    override fun handle(routingContext: RoutingContext) {
-//        val authToken = routingContext.
+    companion object {
+        private val logger = LoggerFactory.getLogger(AuthHandler::class.java)
     }
 }
